# URI

./: Area.c  AreaDoCirculo.c  CMakeLists.txt  CalculoSimples.c  Cedulas.c  Consumo.c  Diferenca.c  Distancia.c  DistanciaEntreDoisPontos.c  Esfera.c  ExtremamenteBasico.c  GastoDeCombustivel.c  Media1.c  Media2.c  OMaior.c  ProdutoSimples.c  Salario.c  SalarioComBonus.c  SomaSimples.c
