cmake_minimum_required(VERSION 3.17)
project(URI C)

set(CMAKE_C_STANDARD 99)

add_executable(URI main.c)
add_executable(ExtremamenteBasico ExtremamenteBasico.c)
add_executable(AreaDoCirculo AreaDoCirculo.c)
add_executable(SomaSimples SomaSimples.c)
add_executable(ProdutoSimples ProdutoSimples.c)
add_executable(Media1 Media1.c)
add_executable(Media2 Media2.c)
add_executable(Diferenca Diferenca.c)
add_executable(Salario Salario.c)
add_executable(SalarioComBonus SalarioComBonus.c)
add_executable(CalculoSimples CalculoSimples.c)
add_executable(Esfera Esfera.c)
add_executable(Area Area.c)
add_executable(OMaior OMaior.c)
add_executable(Consumo Consumo.c)
add_executable(DistanciaEntreDoisPontos DistanciaEntreDoisPontos.c)
add_executable(Distancia Distancia.c)
add_executable(GastoDeCombustivel GastoDeCombustivel.c)
add_executable(Cedulas Cedulas.c)